# iv

./: .build.cmd  .gitignore  CMakeLists.txt  LICENSE  README.md
emuls/hid.fw42/: hid.fw42.ino
ev/: main.c
server/: db_plugin.h  db_plugin_sqlite.c  device.c  device.h  device_ftdi.c  device_ftdi.h  device_hid.c  device_hid.h  event.c  event.h  firmware.c  firmware.h  main.c
server/web/: index.html
utils/: CMakeLists.txt  rawhid.c
whats_new/java/: .gitignore  build.gradle
whats_new/java/src/main/java/ru/iv/support/: Device.java  DeviceController.java  DeviceInfo.java  Event.java  Firmware.java  Packet.java  WebDeviceController.java  WebNotifyController.java
whats_new/java/src/main/java/ru/iv/support/dll/: Callback.java  DeviceControllerImpl.java  Library.java
whats_new/java/src/main/java/ru/iv/support/entity/: AbstractEntity.java  Answer.java  Event.java  JsonLocalDateTimeSerializer.java  Profile.java  Question.java  QuestionChoice.java  QuestionResult.java  QuestionSequence.java  RequestGroup.java  Session.java
whats_new/java/src/main/java/ru/iv/support/notify/: DeviceNotify.java  Notify.java  PacketsNotify.java  ProcessNotify.java  SimpleNotify.java  StatusNotify.java  WebNotifyController.java
whats_new/java/src/main/java/ru/iv/support/repository/: AnswerRepository.java  EventRepository.java  ProfileRepository.java  QuestionChoiceRepository.java  QuestionRepository.java  QuestionSequenceRepository.java  RequestGroupRepository.java  ResultRepository.java  SessionRepository.java
whats_new/java/src/main/java/ru/iv/support/rest/: Application.java
whats_new/java/src/main/java/ru/iv/support/rest/service/: RestDeviceController.java
whats_new/java/src/main/java/ru/iv/support/service/: ExceptionHandlerController.java  JsonLocalDateTimeSerializer.java  QuestionController.java  RestDeviceController.java  RestProcessController.java  ResultController.java  WebDeviceControllerImpl.java  WebNotifyControllerImpl.java
whats_new/java/src/main/kotlin/: Library.kt
whats_new/java/src/main/resources/: application.properties
whats_new/java/src/main/resources/public/: index.html
whats_new/java/src/test/java/ru/iv/support/entity/: RequestGroupTest.java
whats_new/native/: .build.cmd  CMakeLists.txt
whats_new/native/src/: device.c  device.h  device_ftdi.c  device_ftdi.h  device_hid.c  firmware.c  firmware.h  jni_facade.h  main.c
whats_new/net/SupController/: SupController.sln
whats_new/net/SupController/SupController/: Program.cs  SupController.csproj  SupMainForm.Designer.cs  SupMainForm.cs  packages.config
whats_new/net/SupController/SupController/Model/: Event.cs
whats_new/net/SupController/SupController/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  SupMainResource.Designer.cs  SupMainResource.resx
